Implement Day Service method, add Controller method, begin Activity classes, and integrate frontend support